# paper-siblings-household-leverage

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: extract_dta.sh
src/: __init__.py  __main__.py  cli.py  config.py
src/data/: __init__.py  loader.py  midpoint_tables.py  schema.py  validator.py  variables.py
src/export/: __init__.py  latex.py  manifest.py  tables.py
src/models/: __init__.py  diagnostics.py  ols.py  ridge.py  rlm.py  runner.py  spec.py
src/processing/: __init__.py  controls.py  features.py  merge.py  pipeline.py
src/utils/: logging_config.py
src/webapp/: __init__.py  app.py
src/webapp/components/: charts.py  metric_cards.py  sidebar.py
src/webapp/pages/: data_explorer.py  diagnostics.py  overview.py  regression.py
src/webapp/styles/: theme.py
tests/: __init__.py  conftest.py  test_export.py  test_features.py  test_midpoint_tables.py  test_models.py  test_pipeline.py  test_schema.py
